<resources>
    <string name="app_name">FoodAPP</string>
    <string name="title_activity_consumer_dashboard">ConsumerDashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_good">good</string>
    <string name="title_activity_consumer_navigation">ConsumerNavigation</string>
    <string name="title_activity_navigation_consumer">NavigationConsumerActivity</string>
    <string name="profile">Profile</string>
    <string name="category">Category</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="offers">Offers</string>
    <string name="new_products">New Products</string>
    <string name="my_orders">My Orders</string>
    <string name="my_carts">My Carts</string>
    <string name="payments">Payments</string>
    <string name="popular_products">Popular Products</string>
    <string name="search_your_item_here">Search your item here...</string>
    <string name="view_all">View All</string>
    <string name="explore_products">Explore Products</string>
    <string name="recommended">Recommended</string>
    <string name="my_cart">My Cart</string>
    <string name="products">Products</string>
    <string name="product_details">Product Details</string>
    <string name="description">description</string>
</resources>