<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F1F1"
    tools:context=".ConsumerActivities.ui.home.HomeFragment">


  <ProgressBar
      android:id="@+id/progressbarhome"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"/>

  <ScrollView
      android:id="@+id/scroll_view"
      android:layout_width="match_parent"
      android:layout_height="match_parent">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

    <EditText
        android:id="@+id/search_box"
        android:elevation="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:singleLine="true"
        android:hint="@string/search_your_item_here"
        android:drawableLeft="@drawable/ic_baseline_search_24"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:background="@drawable/search_bg"
         />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

      <TextView
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:text="@string/popular_products"
          android:layout_weight="1"
          android:textSize="18sp"
          android:textStyle="bold"
          android:fontFamily="@font/roboto_slab"/>

      <TextView
          android:id="@+id/view_all_products"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:text="@string/view_all"
          android:layout_weight="1"
          android:textSize="16sp"
          android:gravity="end"
          android:layout_marginRight="7dp"
          android:textColor="#87CEEB"
          android:textStyle="bold"
          android:fontFamily="@font/roboto_slab"
          tools:ignore="InvalidId"
          android:layout_marginEnd="7dp" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:id="@+id/pop_rec"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

      <TextView
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:text="@string/explore_products"
          android:layout_weight="1"
          android:textSize="18sp"
          android:textStyle="bold"
          android:fontFamily="@font/roboto_slab"/>

      <TextView
          android:id="@+id/view_all_explore"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:text="@string/view_all"
          android:layout_weight="1"
          android:textSize="16sp"
          android:gravity="end"
          android:layout_marginRight="7dp"
          android:textColor="#87CEEB"
          android:textStyle="bold"
          android:fontFamily="@font/roboto_slab"
          tools:ignore="InvalidId"
          android:layout_marginEnd="7dp" />


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:id="@+id/explore_rec"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

      <TextView
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:fontFamily="@font/roboto_slab"
          android:text="@string/recommended"
          android:textSize="18sp"
          android:textStyle="bold" />

      <TextView
          android:id="@+id/view_all_recommended"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:text="@string/view_all"
          android:layout_weight="1"
          android:textSize="16sp"
          android:gravity="end"
          android:layout_marginRight="7dp"
          android:textColor="#87CEEB"
          android:textStyle="bold"
          android:fontFamily="@font/roboto_slab"
          tools:ignore="InvalidId"
          android:layout_marginEnd="7dp" />


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:id="@+id/recommended_rec"/>




  </LinearLayout>

  </ScrollView>

</RelativeLayout>